--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
             </div>
             <div class="section-lower">
                 <div class="columns">
-                <div class="col1">
+                <div class="col1 wt">
                     <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
                     <p class="col1-uptext">Louis XVI ATHOS</p>
                     <p class="col1-lowtext">165 000 руб.</p>
                 </div>
-                <div class="col2">
+                <div class="col2 wt">
                     <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
                     <p class="col1-uptext">Louis XVI ATHOS</p>
                     <p class="col1-lowtext">165 000 руб.</p>
                 </div>
-                <div class="col3">
+                <div class="col3 wt">
                     <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
                     <p class="col1-uptext">Louis XVI ATHOS</p>
                     <p class="col1-lowtext">165 000 руб.</p>
@@ -66,6 +66,65 @@
             </div>
         </div>
     </section>
+    <section class="half-scnd">
+        <div class="section-left-scnd"></div>
+        <div class="section-right-scnd">
+            <div class="section-right-scnd-uptext h2">КОЛЛЕКЦИЯ 2018</div>
+            <div class="line"></div>
+            <div class="section-right-scnd-lowtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. </div>
+            <a href="#" class="button2">ПОСМОТРЕТЬ КОЛЛЕКЦИЮ</a>
+        </div>
+    </section>
+    <div class="container">
+        <section class="grid">
+            <div class="h2 grid-uptext">
+                НОВЫЕ ПОСТУПЛЕНИЯ
+            </div>
+            <div class="line"></div>
+            <div class="grid-bottom">
+                <div class="wt1">
+                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <p class="wt-uptext">Louis XVI ATHOS</p>
+                    <p class="wt-lowtext">165 000 руб.</p>
+                </div>
+                <div class="wt2">
+                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <p class="wt-uptext">Louis XVI ATHOS</p>
+                    <p class="wt-lowtext">165 000 руб.</p>
+                </div>
+                <div class="wt3">
+                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <p class="wt-uptext">Louis XVI ATHOS</p>
+                    <p class="wt-lowtext">165 000 руб.</p>
+                </div>
+                <div class="wt4">
+                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <p class="wt-uptext">Louis XVI ATHOS</p>
+                    <p class="wt-lowtext">165 000 руб.</p>
+                </div>
+                <div class="wt5">
+                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <p class="wt-uptext">Louis XVI ATHOS</p>
+                    <p class="wt-lowtext">165 000 руб.</p>
+                </div>
+                <div class="wt6">
+                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <p class="wt-uptext">Louis XVI ATHOS</p>
+                    <p class="wt-lowtext">165 000 руб.</p>
+                </div>
+                <div class="wt7">
+                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <p class="wt-uptext">Louis XVI ATHOS</p>
+                    <p class="wt-lowtext">165 000 руб.</p>
+                </div>
+                <div class="wt8">
+                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <p class="wt-uptext">Louis XVI ATHOS</p>
+                    <p class="wt-lowtext">165 000 руб.</p>
+                </div>
+            </div>
+        </section>
+    </div>
     </div>
 </body>
 </html>
