--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT. PURUS INTERDUM PURUS, EST TORTOR PULVINAR UT IN. FRINGILLA A DIAM ENIM SED JUSTO, SED IACULIS SAGITTIS. TORTOR ID EU INTERDUM NEC UT IACULIS. PENATIBUS ULLAMCORPER ULTRICIES MORBI IPSUM SEM METUS PHARETRA, MI. TORTOR NIBH MAGNA FEUGIAT ID NUNC, DUI NISL VIVERRA.">
+    <meta name="keywords" content="купить, купить часы, купить часы рб, часы рб, PORTEN купить, PORTEN, PORTEN часы, buy PORTEN, наручные часы купить, buy watch, buy a watch">
     <link rel="stylesheet" href="style/style.css">
     <title>Porten/St. Petersburg</title>
 </head>
@@ -17,113 +17,132 @@
         <header class="header">
             <div class="container">
                 <div class="header-top">
-                    <a class="header-top__logo" href="#"><img src="img/PORTEN.svg" alt="PORTEN"></a>
-                    <ul class="header-top__menu menu">
-                        <li class="menu-item"><a class="menu-link" href="#">ПОНРАВИЛОСЬ</a></li>
-                        <li class="menu-item"><a class="menu-link" href="#">ЛИЧНЫЙ КАБИНЕТ</a></li>
-                        <li class="menu-item"><a class="menu-link" href="#">НАСТРОЙКИ</a></li>
-                    </ul>
+                        <a href="#" class="header-top__mainlogo"><img src="img/PORTEN.svg" alt="PORTEN" class="header-top__logo"></a>
+                        <ul class="header-top__menu menu">
+                            <li class="menu-item"><a href="#" class="menu-link">ПОНРАВИЛОСЬ</a></li>
+                            <li class="menu-item"><a href="#" class="menu-link">ЛИЧНЫЙ КАБИНЕТ</a></li>
+                            <li class="menu-item"><a href="#" class="menu-link">НАСТРОЙКИ</a></li>
+                        </ul>
                 </div>
             </div>
             <div class="background">
                 <div class="header-bottom">
-                    <img class="header-bottom__logo" src="img/logo.svg" alt="logo">
+                    <img src="img/logo.svg" alt="logo" class="header-bottom__logo">
                     <p class="header-bottom__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. Tortor nibh magna feugiat id nunc, dui nisl viverra.</p>
                 </div>
             </div>
         </header>
-    <section class="half">
-        <div class="section-left">
-            <div class="section-upper">
-                <h2 class="h2 section-upper__h2">СЕЗОН 2020/21</h2>
-                <div class="line"></div>
-            </div>
-            <div class="section-lower">
+        <section class="half">
+            <div class="section-left">
+                <div class="section-upper">
+                    <h2 class="section-upper__h2 h2">
+                        СЕЗОН 2020/21
+                    </h2>
+                    <div class="line"></div>
+                </div>
+                <div class="section-lower">
                 <div class="columns">
-                <div class="col1 wt">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
-                    <p class="col1-uptext">Louis XVI ATHOS</p>
-                    <p class="col1-lowtext">165 000 руб.</p>
-                </div>
-                <div class="col2 wt">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
-                    <p class="col1-uptext">Louis XVI ATHOS</p>
-                    <p class="col1-lowtext">165 000 руб.</p>
-                </div>
-                <div class="col3 wt">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
-                    <p class="col1-uptext">Louis XVI ATHOS</p>
-                    <p class="col1-lowtext">165 000 руб.</p>
+                    <div class="col1 wt">
+                        <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc"></div>
+                        <p class="col1-uptext">Louis XVI ATHOS</p>
+                        <p class="col1-lowtext">165 000 руб.</p>
+                    </div>
+                    <div class="col2 wt">
+                        <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc"></div>
+                        <p class="col1-uptext">Louis XVI ATHOS</p>
+                        <p class="col1-lowtext">165 000 руб.</p>
+                    </div>
+                    <div class="col3 wt">
+                        <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc"></div>
+                        <p class="col1-uptext">Louis XVI ATHOS</p>
+                        <p class="col1-lowtext">165 000 руб.</p>
+                    </div>
                 </div>
                 </div>
             </div>
-        </div>
-        <div class="section-right">
-            <div class="textbutt">
-                <h2 class="textbutt__h2">НОВАЯ КОЛЛЕКЦИЯ</h2>
+            <div class="section-right">
+                <h2 class="section-right__h2 h2">НОВАЯ КОЛЛЕКЦИЯ</h2>
                 <div class="line"></div>
-                <a class="button" href="#">КАТАЛОГ</a>
+                <a href="#" class="button1">КАТАЛОГ</a>
             </div>
-        </div>
-    </section>
-    <section class="half-scnd">
-        <div class="section-left-scnd"></div>
-        <div class="section-right-scnd">
-            <div class="section-right-scnd-uptext h2">КОЛЛЕКЦИЯ 2018</div>
-            <div class="line"></div>
-            <div class="section-right-scnd-lowtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. </div>
-            <a href="#" class="button2">ПОСМОТРЕТЬ КОЛЛЕКЦИЮ</a>
-        </div>
-    </section>
-    <div class="container">
+        </section>
+        <section class="half-scnd">
+            <div class="section-left-scnd"></div>
+            <div class="section-right-scnd">
+                <div class="adaptive-background"></div>
+                <h2 class="section-right-scnd__h2 h2">КОЛЛЕКЦИЯ 2018</h2>
+                <div class="line"></div>
+                <p class="section-right-scnd__lowtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. </p>
+                <a href="#" class="button2">ПОСМОТРЕТЬ КОЛЛЕКЦИЮ</a>
+            </div>
+        </section>
+        <div class="container">
         <section class="grid">
-            <div class="h2 grid-uptext">
-                НОВЫЕ ПОСТУПЛЕНИЯ
+            <div class="grid-top">
+                <h2 class="grid-top__h2 h2">НОВЫЕ ПОСТУПЛЕНИЯ</h2>
+                <div class="line"></div>
             </div>
-            <div class="line"></div>
             <div class="grid-bottom">
                 <div class="wt1">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc1"></div>
                     <p class="wt-uptext">Louis XVI ATHOS</p>
                     <p class="wt-lowtext">165 000 руб.</p>
                 </div>
                 <div class="wt2">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc1"></div>
                     <p class="wt-uptext">Louis XVI ATHOS</p>
                     <p class="wt-lowtext">165 000 руб.</p>
                 </div>
                 <div class="wt3">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc1"></div>
                     <p class="wt-uptext">Louis XVI ATHOS</p>
                     <p class="wt-lowtext">165 000 руб.</p>
                 </div>
                 <div class="wt4">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc1"></div>
                     <p class="wt-uptext">Louis XVI ATHOS</p>
                     <p class="wt-lowtext">165 000 руб.</p>
                 </div>
                 <div class="wt5">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc1"></div>
                     <p class="wt-uptext">Louis XVI ATHOS</p>
                     <p class="wt-lowtext">165 000 руб.</p>
                 </div>
                 <div class="wt6">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc1"></div>
                     <p class="wt-uptext">Louis XVI ATHOS</p>
                     <p class="wt-lowtext">165 000 руб.</p>
                 </div>
                 <div class="wt7">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc1"></div>
                     <p class="wt-uptext">Louis XVI ATHOS</p>
                     <p class="wt-lowtext">165 000 руб.</p>
                 </div>
                 <div class="wt8">
-                    <div class="watch"><img src="img/62050 1.png" alt="watch"></div>
+                    <div class="watch"><img src="img/62050 1.png" alt="watch" class="wtc1"v></div>
                     <p class="wt-uptext">Louis XVI ATHOS</p>
                     <p class="wt-lowtext">165 000 руб.</p>
                 </div>
             </div>
         </section>
+        </div>
+        <div class="background2">
+        <div class="container">
+        <footer class="footer">
+            <h2 class="footer__h2">НАШИ БРЕНДЫ</h2>
+            <div class="line"></div>
+            <div class="brands">
+               <a href="#"><img src="img/Rectangle 13.png" alt="brand"></a>
+               <a href="#"><img src="img/Rectangle 13.png" alt="brand"></a>
+               <a href="#"><img src="img/Rectangle 13.png" alt="brand"></a>
+               <a href="#"><img src="img/Rectangle 13.png" alt="brand"></a>
+            </div>
+            <div class="rights">
+                <p class="r1">© 2020 Все права защищены</p>
+                <p class="r2">Сделано Figma.info</p>
+            </div>
+        </footer>
+        </div>
     </div>
     </div>
 </body>
